<?xml version="1.0"?>
<package format="2">
  <name>driver_station</name>
  <version>0.0.0</version>
  <description>Driver station based on FRC Driver Station</description>

  <maintainer email="kaelan.ms@uwreact.ca">UW React Software Team</maintainer>

  <license>BSD-3</license>

  <url type="website">http://uwreact.ca</url>
  <url type="repository">http://github.com/frc_control/driver_station</url>
  <url type="bugtracker">http://github.com/frc_control/driver_station/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>python_qt_binding</depend>

</package>
