<?xml version="1.0"?>
<package format="2">
  <name>driver_station</name>
  <version>0.0.0</version>
  <description>Driver station based on FRC Driver Station</description>

  <maintainer email="mtreynolds@uwaterloo.ca">Matt Reynolds</maintainer>

  <license>BSD-3</license>

  <url type="website">http://uwreact.ca</url>
  <!-- <url type="website">http://wiki.ros.org/frc_control</url> -->
  <url type="bugtracker">https://github.com/uwreact/frc_control/issues</url>
  <url type="repository">https://github.com/uwreact/frc_control</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>python_qt_binding</exec_depend>

</package>
