<?xml version="1.0"?>
<package format="2">
  <name>frc_msgs</name>
  <version>0.0.0</version>
  <description>FRC messages, such as those required to imitate the Driver Station</description>

  <maintainer email="mtreynolds@uwaterloo.ca">Matt Reynolds</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
